updated the README file for DownloadAndDecrypt.py and clarified statements from the previous version on the README file.

--- a/README
+++ b/README
@@ -4,17 +4,19 @@ This is my first public git repo so I apologize for any shortcomings.
 I have mainly programmed in Java for years so please only kindly point out my 'non-pythonic' code.
 Feel free to give constructive criticism.
 
+main.py - the main program:
 Basic Understanding:
     This program will first connect to your MotionEye device and create a list of each video file and their parent
     directory.
     The parent directories are named after the date they were recorded. I will refer to theses as the 'date directories'
-    Next it will connect to your AWS FTP server that needs to be set up previously (if you don't know how, or are not
-    familiar with linux, I suggest you to follow a separate tutorial online.) and create a list of its local date
-    directories and the videos they contain.
-    Thirdly, it will compare these two lists to determine which videos are on the MotionEye device and the AWS FTP
+    Next it will connect to your AWS EC2 instance that is running an SFTP server that needs to be set up previously
+    (if you don't know how, or are not familiar with linux, I suggest you to follow a separate tutorial online.) and
+    create a list of its local date directories and the videos they contain.
+    Thirdly, it will compare these two lists to determine which videos are on the MotionEye device and the AWS SFTP
     server.
     Using this information, it will download said files to a local server/whichever computer is hosting this program.
-    Using the same list as above, it will then encrypt, and then upload each of the missing files to the AWS FTP.
+    Using the same list as above, it will then encrypt, and then upload each of the missing files to the AWS SFTP
+    server.
 
 Getting Started:
     0. If you haven't already, run the 'pipenv shell' command to automatically download the dependencies.
@@ -30,7 +32,7 @@ Getting Started:
        crash the program once it tries to connect to the MotionEye machine.
     3. fill in the config file with the variables needed to successfully run the program. They should be mostly self
        explanatory. For the filepath variables, I suggest using the full filepath instead of relative to main.py.
-       The only exceptions to this would be the the '.pem' or '.ppk' key that you generated for your AWS instance,
+       The only exceptions to this would be the the '.pem' or '.ppk' key that you generated for your AWS EC2 instance,
        as well as the '.key' file you will generate to encrypt the videos before uploading. which will be in the next
        step.
     4. run the CreateEncryptionKey.py file and the encryption key will be created. no further action should be needed.
@@ -45,10 +47,9 @@ Getting Started:
        Apply the changes and reboot the MotionEye device if needed.
 
 Further configuration (optional):
-    That is all you should have to do to be able to manually run this program. However if you would like to have this
-    program ran automatically every time a video is created on your MotionEye device, here is how I set up my
-    implementation. This tutorial is assuming that your local server 'in production' is a linux OS, as well as that
-    the local server and the MotionEye Device are on the same network.
+    If you would like to have this program ran automatically every time a video is created on your MotionEye device,
+    here is how I set up my implementation. This tutorial is assuming that your local server 'in production' is a linux
+    OS, as well as that the local server and the MotionEye Device are on the same network.
 
     1. In your browser, navigate to the MotionEye webpage that the MotionEye device is hosting. Once there, open the
        menu on the top left of the screen, scroll down to 'Motion Notifications' and click the arrow to open the sub
@@ -77,9 +78,10 @@ Further configuration (optional):
     4. run 'pipenv shell' in this directory so the dependencies are downloaded to the server.
     5. now we will set it up so this backup.sh starts listening on the desired port and executes when the right token
         received by the MotionEye device.
-    6. using a user that can execute scripts in the directory of the script and the script itself, run 'crontab -e'
-        This file that appears lets you run programs at specified times. This interface is a 'vim' like text editor so
-        look up the manual to learn the basics of its use. add this next line in at the end of the file on its own line:
+    6. logged in as a user that can execute scripts in the directory of the script and the script itself, run
+        'crontab -e'. This file that appears on the screen lets you run programs at specified times.
+        This interface is a 'vim' like text editor so look up the manual to learn the basics of its use.
+        Add this next line in at the end of the file on its own line:
         @reboot /usr/bin/screen -dmS backup-screen /<Full_path_to_script>/backup.sh
         replace the '<>' and whats in them with the full path the where you put the script.
         save this while not in any edit mode and type in ":wq!" without the quotes, hitting enter.
@@ -91,14 +93,14 @@ Further configuration (optional):
 
 Explanation:
     Before going through the whole program, here is some context for step 6. The line added in step 6 to the 'crontab'
-    file configured your server to run the backup.sh script in a virtual terminal, whenever the server machine starts.
+    file configured your server to run the backup.sh script in a virtual terminal, whenever the server starts up.
     this command utilizes 'screen' as the virtual terminal and names it 'backup-screen'. You can change the name by
     editing it in the crontab file again. screen allows you to connect to this virtual terminal after logging into a
     console on the local server, by running 'screen -r backup-screen', and disconnecting with 'ctrl + a + d'.
     This will then show you the output of the python program.
     The 'backup.sh' script will listen forever on the desired port, waiting for the signal token from the
-    MotionEye device. once the python script is finished, it will continue to wait until the next time a signal is
-    received.
+    MotionEye device. once the python script is finished, it will continue to wait until the next time the correct
+    signal token is received.
 
 Walk Through:
     Once a video file is created on the MotionEye device (due to motion detection or other configured settings) the
@@ -117,4 +119,11 @@ Walk Through:
     the same directory structure is used as the local server.
 
 
-
+DownloadAndDecrypt.py - downloading all or specific files to the local machine:
+Basic Understanding:
+    This program provides a pysudo-shell environment in python that allows the user to download all, some, or even one
+    video from the AWS EC2 SFTP server to the machine running this script.
+    The program provides a help message that includes instructions on how to use the tool.
+Notes:
+    This file utilizes functions in the main.py file, as well as the generated file key. those two files need to be in
+    the same directory as 'DownloadAndDecrypt.py' to function.
